# ptfl

./: .gitignore  CMakeLists.txt
src/: CMakeLists.txt
src/dbcomm/: CMakeLists.txt  databaseproxy.cpp  databaseproxy.h  io.cpp  io.h  portfolio.cpp  portfolio.h
src/gui/: CMakeLists.txt  mainwindow.cpp  mainwindow.h
src/gui/utils/: noneditabletablewidgetitem.cpp  noneditabletablewidgetitem.h  noneditabletextfield.cpp  noneditabletextfield.h
src/gui/widgets/: accountswidget.cpp  accountswidget.h  stockstablewidget.cpp  stockstablewidget.h
src/prices/: CMakeLists.txt  currentpricescontroller.cpp  currentpricescontroller.h  pricesapi.cpp  pricesapi.h  transaction.h
src/ptflcore/: CMakeLists.txt  databaseproxy.cpp  databaseproxy.h  portfolio.cpp  portfolio.h
src/ptfldb/: CMakeLists.txt
